log/build_2023-08-04_14-36-37/arduino_communication/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/arduino_communication/lib/python3.10/site-packages/arduino_communication/water_pumps_bno.py", line 116
    self.serial_comm_locker:
                            ^
SyntaxError: invalid syntax

